--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/three": "^0.166.0",
     "@vueuse/core": "^10.11.0",
     "cubejs": "^1.3.2",
+    "pinia": "^2.1.7",
     "three": "^0.166.1",
     "vue": "^3.4.31"
   },
