--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@vueuse/core": "^10.11.0",
     "cubejs": "^1.3.2",
     "pinia": "^2.1.7",
+    "sass": "^1.77.8",
     "three": "^0.166.1",
-    "vue": "^3.4.31"
+    "vite-plugin-vuetify": "^2.0.3",
+    "vue": "^3.4.31",
+    "vuetify": "^3.6.13-3.7.0-beta.0.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
