--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mdi/font": "^7.4.47",
     "@types/three": "^0.166.0",
     "@vueuse/core": "^10.11.0",
     "cubejs": "^1.3.2",
